--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "moongose": "^1.0.0"
+    "mongoose": "^6.5.1"
   },
   "devDependencies": {
     "colors": "^1.4.0"
